# broadband-agent

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  USAGE.md  design.md  opencode.json  plugin.json  pyproject.toml  requirements.txt
.claude/rules/: skills_rules.md
.opencode/agents/: home-broadband.md  insight.md  orchestrator.md  planning.md  provisioning-cei-chain.md  provisioning-delivery.md  provisioning-wifi.md
.opencode/tools/: get_skill_script.ts
agents/: insight.md  orchestrator.md  planning.md  provisioning-cei-chain.md  provisioning-delivery.md  provisioning-wifi.md
api/: engine_config.py  event_adapter.py  main.py  models.py  opencode_adapter.py  opencode_bridge.py  repository.py  sse.py
api/routes/: engine.py  messages.py
app/: config.py  guardrails.py  main.py
app/agent/: __init__.py  agent.py  config_agent.py  constraint_agent.py  intent_agent.py  plan_agent.py  skill_loader.py  team.py  tools.py  tracer.py
app/agents/: __init__.py  config_agent.py  constraint_agent.py  intent_agent.py  pipeline.py  plan_agent.py
app/api/: routes.py
app/db/: __init__.py  crud.py  database.py
app/logger/: __init__.py  logger.py  setup.py  tracer.py
app/models/: __init__.py  config.py  constraint.py  intent.py  plan.py
app/outputs/: sink.py
app/tools/: __init__.py  config_tools.py  constraint_tools.py  profile_tools.py  (+1 more)
configs/: agent.yaml  agents.yaml  downstream.yaml  engine.json  llm.yaml  llm.yaml.example  logging.yaml  model.yaml  pipeline.yaml  slot_schema.yaml
core/: agent_factory.py  downstream_client.py  model_loader.py  session_manager.py  skill_recovery.py
docs/: migration-plan.md  opencode_bridge_design.md  opencode_engine.md  plan-tool-error-recovery.md
fae_poc/: __init__.py
hooks/: ensure-uv-env.sh  hooks.json
prompts/: insight.md  main_agent_system.md  orchestrator.md  planning.md  provisioning.md
templates/: cei_perception_plan.json  dynamic_optimization_plan.json  fault_diagnosis_plan.json  manual_fallback_plan.json  remote_closure_plan.json  user_profile.json
tests/: test_smoke.py  test_tool_error_recovery.py
ui/: app.py  chat_renderer.py  chat_ui.py  session_state.py
(+130 files in other folders)
