# 本项目是 Hummingbird 的 fae plugin（不是库），不声明 [build-system]。
# uv 会把它当 virtual project：只安装 dependencies，不尝试构建自身。

[project]
name = "fae-plugin"
version = "0.1.0"
description = "Hummingbird fae plugin — 家宽网络调优多 Agent 系统（Orchestrator + 5 SubAgents + 16 Skills）"
requires-python = ">=3.11"
license = "Proprietary"
authors = [{ name = "fae-plugin team" }]
dependencies = [
    # ── LLM ──
    "openai>=1.0.0",
    # ── 基础设施 ──
    "loguru>=0.7.0",
    "pyyaml>=6.0",
    "jinja2>=3.0",
    "aiofiles>=23.0",
    # ── 科学计算栈 (data_insight / ce_insight_core) ──
    "pandas>=2.0",
    "numpy>=1.24",
    "scipy>=1.10",
    "scikit-learn>=1.3",
    "pydantic>=2.0",
    # ── vendor 本地包 ──
    "ce-insight-core",
    # ── wifi_simulation 依赖（图像处理 + 信号仿真 + 可视化）──
    "opencv-python-headless>=4.8",
    "matplotlib>=3.7",
    "typer>=0.9",
    "rich>=13.0",
    "fae-demo",
    "requests>=2.33.1",
    "cei-query",
    "json-repair>=0.59.4",
]

[dependency-groups]
dev = [
    "pytest>=7.0",
    "ruff>=0.1",
]

[[tool.uv.index]]  # 为本项目修改镜像源
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

# uv 从本地 vendor 路径解析 ce-insight-core，editable 模式安装
[tool.uv.sources]
fae-demo = { path = "vendor/fae_sim", editable = true }
ce-insight-core = { path = "vendor/ce_insight_core", editable = true }
cei-query = { path = "vendor/cei_query-0.0.post15-py3-none-any.whl" }

# ── ruff 配置 ──
[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
